--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
   "author": "isense",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.11.0",
+    "@prisma/client": "^5.17.0",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongoose": "^7.3.1",
     "jsonwebtoken": "^9.0.2",
-    "prisma": "^5.11.0",
+    "mongoose": "^7.3.1",
     "nodemon": "^2.0.22"
+  },
+  "devDependencies": {
+    "prisma": "^5.17.0"
   }
 }
